chore: toList() 사용